--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         <activity
             android:name=".ActivityMain"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".ActivityFirst"
             android:label="@string/title_activity_activity_first"
@@ -25,6 +25,9 @@
         <activity
             android:name=".ActivityLogin"
             android:label="@string/title_activity_activity_login"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".ActivityDiagnose"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
