--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.github.traex.rippleeffect:library:1.3'
     compile project(':ViewPagerCom')
+    compile 'se.emilsjolander:stickylistheaders:2.7.0'
 }
