--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,8 +15,7 @@
         <activity
             android:name=".ActivityFirst"
             android:label="@string/title_activity_activity_first"
-            android:theme="@style/AppTheme.NoActionBar">
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
             android:name=".ActivityLogin"
             android:label="@string/title_activity_activity_login"
@@ -33,7 +32,7 @@
             android:name=".ActivitySplashScreen"
             android:label="@string/title_activity_activity_splash_screen"
             android:noHistory="true"
-            android:theme="@style/AppTheme.NoActionBar" >
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -43,6 +42,10 @@
         <activity
             android:name=".ActivityOtherAccount"
             android:label="@string/title_activity_activity_other_account"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".ActivityWeather"
+            android:label="@string/title_activity_activity_weather"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
