--- a/gradle.properties
+++ b/gradle.properties
@@ -1,18 +1,23 @@
-# Project-wide Gradle settings.
-
-# IDE (e.g. Android Studio) users:
-# Gradle settings configured through the IDE *will override*
-# any settings specified in this file.
-
+## Project-wide Gradle settings.
+#
 # For more details on how to configure your build environment visit
 # http://www.gradle.org/docs/current/userguide/build_environment.html
-
+#
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
 # Default value: -Xmx10248m -XX:MaxPermSize=256m
 # org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
-
+#
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+#Wed Aug 31 14:52:02 JST 2016
+systemProp.http.proxyPassword=AllahMuhammadOrtu27
+systemProp.https.proxyUser=rizalfahmi@it.student.pens.ac.id
+systemProp.https.proxyPort=443
+systemProp.http.proxyHost=proxy3.pens.ac.id
+systemProp.https.proxyPassword=AllahMuhammadOrtu27
+systemProp.https.proxyHost=proxy3.pens.ac.id
+systemProp.http.proxyUser=rizalfahmi@it.student.pens.ac.id
+systemProp.http.proxyPort=443
